--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
 <!-- Write your HTML in this file -->
+<!DOCTYPE html>
+
+<html>
+
+<head>
+    <title>Jeff's Super Excellent Homepage</title>
+</head>
+
+<body>
+</body>
+
+</html>
